[package]
name = "aion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
daemonize = "0.4.1"
notify-rust = { version = "4.5.10", default-features = false, features = ["d", "images"] }
